--- a/core/assets/scss/style.scss
+++ b/core/assets/scss/style.scss
@@ -236,12 +236,13 @@ div {
 
 /** File Wp **/
 div.w2p-upload{
-  width: 80px;
-  height: 80px;
+  width: 130px;
+  height: 130px;
   display: block;
-  padding: 10px;
-  border: 2px dashed #dedede;
+  border: 1px SOLID #dedede;
   cursor: pointer;
+  position: relative;
+  float: left;
 
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
@@ -249,13 +250,15 @@ div.w2p-upload{
   transition: all 0.3s linear;
 
   div.file {
-    width: 100%;
-    height: 100%;
     background-size: cover;
     color: transparent;
-    line-height: 80px;
+    line-height: 100px;
     text-align: center;
-    position: relative;
+    position: absolute;
+    top   : 5px;
+    right : 5px;
+    bottom: 5px;
+    left  : 5px;
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
@@ -263,6 +266,24 @@ div.w2p-upload{
 
   }
 
+  p {
+    opacity: 0;
+    position: absolute;
+    line-height: 2.5em;
+    font-size: 10px;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+    margin: 0;
+
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+  }
 
   &:before {
     content: " ";
@@ -282,6 +303,16 @@ div.w2p-upload{
 
     .file:hover{ color: #333; }
     &:before { background-color: rgba(white, 0.25); }
+    p {
+      opacity: 1;
+    }
+  }
 
+}
+.w2p-data-infos {
+  float: left;
+  margin-left: 10px;
+  p {
+    font-size: 14px !important;
   }
 }
